--- a/subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.4 (SEE 2.6)
+
+    *) fixed missing shortcut due to typo in the script
+
 Changes with Version 1.3 (SEE 2.5)
 
     *) added scripts: Insert Shebang, chmod ug+x, Check Syntax and Run in Terminal
