--- a/subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.5 (SEE 2.6)
+
+    *) now indents class defs in the symbol popup
+
 Changes with Version 1.4 (SEE 2.5.1)
 
     *) Corrected precedence of states for built-in modes
