--- a/Modes/HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/Modes/HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.5 (SEE 2.6)
+
+    *) Removing whitespace before and after headline symbols in popup
+
 Changes with Version 1.4 (SEE 2.5.1)
 
     *) Substituted 501 with `id -g` to make all utf-8 "do shell script" commands work on non-501 users. (fixes SEE-1042)
