--- a/subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes with Version 1.6 (SEE 2.6.2)
+
+    *) Check Syntax: the luac binary now is found when the 
+       correspondig PATH is set only in ~/.bashrc
+
 Changes with Version 1.5 (SEE 2.6.1)
 
     *) better function signature highlighting
