--- a/subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.7 (SEE 2.6.4)
+    *) fixed the validate scripts to work with unicode and leopard
+    *) fixed the validate scripts to work with tabs
+
 Changes with Version 1.6 (SEE 2.6.2)
 
     *) Check Syntax: the luac binary now is found when the 
