--- a/subethaedit/German.lproj/ReleaseNotes.txt
+++ b/subethaedit/German.lproj/ReleaseNotes.txt
@@ -1,4 +1,19 @@
 
+SubEthaEdit 2.6.5
+=================
+
+Korrekturen:
+- Ein Absturz wurde behoben der beim Schliessen eines Dokumentes auftreten 
+  konnte, wenn die Web Vorschau sich gerade aktualisierte.
+- Ein Fehler wurde behoben durch den "Zeilen umbrechen" nicht richtig 
+  eingeschalten wurde, wenn sich kein Text im Document befand, der zum 
+  Zeitpunkt des Einschaltens umgebrochen werden musste.
+- Ein Fehler wurde behoben, welcher dafür sorgte, dass das letzte Zeichen einer 
+  Änderung machnmal nicht richtig markiert dargestellt wurde.
+- Ein Fehler wurde behoben, welcher zum Schliessen des automatisch geöffneten 
+  Dokumentes führte, wenn man es über das Fenster Menü aktivierte.
+
+
 SubEthaEdit 2.6.4
 =================
 
