- removed erb from ruby mode - changed PHP-HTML mode to use imports (preliminary - will be built the same way as erb mode which i'm building now) - added explicit rsa keylength setting when generating self singed certificate

--- a/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.0 (SEE 2.7)
+    *) removed ERB and put it into a new mode
+
 Changes with Version 2.7 (SEE 2.6.4)
     *) fixed the validate scripts to work with unicode and leopard
     *) fixed hexadecimal character keyword
