--- a/Modes/Conference.mode/Contents/Resources/ChangeLog.txt
+++ b/Modes/Conference.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes with Version 1.3 (SEE 3.0)
+
+    *) .?! are now allowed in HEADINGS and SECTIONS
+
+
 Changes with Version 1.2 (SEE 2.3)
 
     *) SYMBOLS: Fixed SEE-490.
