--- a/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,7 +1,9 @@
+Changes with Version 1.8 (SEE 3.0.1)
+    *) greatly improved PHP mode by switching to nested states
+
 Changes with Version 1.7 (SEE 2.6.3)
     *) fixed the validate scripts to work with unicode and leopard
     *) fixed the validate scripts to work with tabs
-
 
 Changes with Version 1.6
     *) added PHP5 specific keywords
